crates/tlang_parser/tests/snapshots/parser_types__function_param_types.snap
---
source: crates/tlang_parser/tests/parser_types.rs
expression: "parse! (\"fn foo(x: i64, y: i64) -> i64 { x }\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 13,
      kind: FunctionDeclaration(FunctionDeclaration(
        id: 12,
        visibility: Private,
        name: Expr(
          id: 3,
          kind: Path(Path(
            segments: [
              Ident(
                name: "foo",
                span: Span(
                  start: 3,
                  end: 6,
                  start_lc: LineColumn(
                    line: 0,
                    column: 3,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 6,
                  ),
                ),
              ),
            ],
            res: Unresolved,
            span: Span(
              start: 3,
              end: 6,
              start_lc: LineColumn(
                line: 0,
                column: 3,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 6,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 3,
            end: 6,
            start_lc: LineColumn(
              line: 0,
              column: 3,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 6,
            ),
          ),
        ),
        parameters: [
          FunctionParameter(
            pattern: Pat(
              id: 4,
              kind: Identifier(Ident(
                name: "x",
                span: Span(
                  start: 7,
                  end: 8,
                  start_lc: LineColumn(
                    line: 0,
                    column: 7,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 8,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 7,
                end: 8,
                start_lc: LineColumn(
                  line: 0,
                  column: 7,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 8,
                ),
              ),
            ),
            type_annotation: Some(Ty(
              id: 5,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "i64",
                    span: Span(
                      start: 10,
                      end: 13,
                      start_lc: LineColumn(
                        line: 0,
                        column: 10,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 13,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: 10,
                  end: 13,
                  start_lc: LineColumn(
                    line: 0,
                    column: 10,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 13,
                  ),
                ),
              )),
              parameters: [],
              span: Span(
                start: 10,
                end: 13,
                start_lc: LineColumn(
                  line: 0,
                  column: 10,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 13,
                ),
              ),
            )),
            span: Span(
              start: 7,
              end: 13,
              start_lc: LineColumn(
                line: 0,
                column: 7,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 13,
              ),
            ),
          ),
          FunctionParameter(
            pattern: Pat(
              id: 6,
              kind: Identifier(Ident(
                name: "y",
                span: Span(
                  start: 15,
                  end: 16,
                  start_lc: LineColumn(
                    line: 0,
                    column: 15,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 16,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 15,
                end: 16,
                start_lc: LineColumn(
                  line: 0,
                  column: 15,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 16,
                ),
              ),
            ),
            type_annotation: Some(Ty(
              id: 7,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "i64",
                    span: Span(
                      start: 18,
                      end: 21,
                      start_lc: LineColumn(
                        line: 0,
                        column: 18,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 21,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: 18,
                  end: 21,
                  start_lc: LineColumn(
                    line: 0,
                    column: 18,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 21,
                  ),
                ),
              )),
              parameters: [],
              span: Span(
                start: 18,
                end: 21,
                start_lc: LineColumn(
                  line: 0,
                  column: 18,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 21,
                ),
              ),
            )),
            span: Span(
              start: 15,
              end: 21,
              start_lc: LineColumn(
                line: 0,
                column: 15,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 21,
              ),
            ),
          ),
        ],
        params_span: Span(
          start: 6,
          end: 22,
          start_lc: LineColumn(
            line: 0,
            column: 6,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 22,
          ),
        ),
        guard: None,
        return_type_annotation: Some(Ty(
          id: 8,
          kind: Path(Path(
            segments: [
              Ident(
                name: "i64",
                span: Span(
                  start: 26,
                  end: 29,
                  start_lc: LineColumn(
                    line: 0,
                    column: 26,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 29,
                  ),
                ),
              ),
            ],
            res: Unresolved,
            span: Span(
              start: 26,
              end: 29,
              start_lc: LineColumn(
                line: 0,
                column: 26,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 29,
              ),
            ),
          )),
          parameters: [],
          span: Span(
            start: 26,
            end: 29,
            start_lc: LineColumn(
              line: 0,
              column: 26,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 29,
            ),
          ),
        )),
        body: Block(
          id: 11,
          statements: [],
          expression: Some(Expr(
            id: 10,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "x",
                  span: Span(
                    start: 32,
                    end: 33,
                    start_lc: LineColumn(
                      line: 0,
                      column: 32,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 33,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: 32,
                end: 33,
                start_lc: LineColumn(
                  line: 0,
                  column: 32,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 33,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 32,
              end: 33,
              start_lc: LineColumn(
                line: 0,
                column: 32,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 33,
              ),
            ),
          )),
          span: Span(
            start: 30,
            end: 35,
            start_lc: LineColumn(
              line: 0,
              column: 30,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 35,
            ),
          ),
        ),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 35,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 35,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 35,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 35,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 35,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 35,
    ),
  ),
)
