crates/tlang_parser/tests/snapshots/parser_types__return_type_annotation-2.snap
---
source: crates/tlang_parser/tests/parser_types.rs
expression: "parse! (\"fn foo() -> Option<i64> { 1 }\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 10,
      kind: FunctionDeclaration(FunctionDeclaration(
        id: 9,
        visibility: Private,
        name: Expr(
          id: 3,
          kind: Path(Path(
            segments: [
              Ident(
                name: "foo",
                span: Span(
                  start: 3,
                  end: 6,
                  start_lc: LineColumn(
                    line: 0,
                    column: 3,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 6,
                  ),
                ),
              ),
            ],
            res: Unresolved,
            span: Span(
              start: 3,
              end: 6,
              start_lc: LineColumn(
                line: 0,
                column: 3,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 6,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 3,
            end: 6,
            start_lc: LineColumn(
              line: 0,
              column: 3,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 6,
            ),
          ),
        ),
        type_params: [],
        parameters: [],
        params_span: Span(
          start: 6,
          end: 8,
          start_lc: LineColumn(
            line: 0,
            column: 6,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 8,
          ),
        ),
        guard: None,
        return_type_annotation: Some(Ty(
          id: 5,
          kind: Path(Path(
            segments: [
              Ident(
                name: "Option",
                span: Span(
                  start: 12,
                  end: 18,
                  start_lc: LineColumn(
                    line: 0,
                    column: 12,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 18,
                  ),
                ),
              ),
            ],
            res: Unresolved,
            span: Span(
              start: 12,
              end: 18,
              start_lc: LineColumn(
                line: 0,
                column: 12,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 18,
              ),
            ),
          )),
          parameters: [
            Ty(
              id: 4,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "i64",
                    span: Span(
                      start: 19,
                      end: 22,
                      start_lc: LineColumn(
                        line: 0,
                        column: 19,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 22,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: 19,
                  end: 22,
                  start_lc: LineColumn(
                    line: 0,
                    column: 19,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 22,
                  ),
                ),
              )),
              parameters: [],
              span: Span(
                start: 19,
                end: 22,
                start_lc: LineColumn(
                  line: 0,
                  column: 19,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 22,
                ),
              ),
            ),
          ],
          span: Span(
            start: 12,
            end: 23,
            start_lc: LineColumn(
              line: 0,
              column: 12,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 23,
            ),
          ),
        )),
        body: Block(
          id: 8,
          statements: [],
          expression: Some(Expr(
            id: 7,
            kind: Literal(UnsignedInteger(1)),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 26,
              end: 27,
              start_lc: LineColumn(
                line: 0,
                column: 26,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 27,
              ),
            ),
          )),
          span: Span(
            start: 24,
            end: 29,
            start_lc: LineColumn(
              line: 0,
              column: 24,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 29,
            ),
          ),
        ),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 29,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 29,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 29,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 29,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 29,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 29,
    ),
  ),
)
