crates/tlang_parser/tests/snapshots/parser_types__return_type_annotation-3.snap
---
source: crates/tlang_parser/tests/parser_types.rs
expression: "parse! (\"let expr = fn foo() -> i64 { 1 };\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 11,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 3,
          kind: Identifier(Ident(
            name: "expr",
            span: Span(
              start: 4,
              end: 8,
              start_lc: LineColumn(
                line: 0,
                column: 4,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 8,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 4,
            end: 8,
            start_lc: LineColumn(
              line: 0,
              column: 4,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 8,
            ),
          ),
        ),
        expression: Expr(
          id: 9,
          kind: FunctionExpression(FunctionDeclaration(
            id: 10,
            visibility: Private,
            name: Expr(
              id: 4,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "foo",
                    span: Span(
                      start: 14,
                      end: 17,
                      start_lc: LineColumn(
                        line: 0,
                        column: 14,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 17,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: 14,
                  end: 17,
                  start_lc: LineColumn(
                    line: 0,
                    column: 14,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 17,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 14,
                end: 17,
                start_lc: LineColumn(
                  line: 0,
                  column: 14,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 17,
                ),
              ),
            ),
            parameters: [],
            guard: None,
            return_type_annotation: Some(Ty(
              id: 5,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "i64",
                    span: Span(
                      start: 23,
                      end: 26,
                      start_lc: LineColumn(
                        line: 0,
                        column: 23,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 26,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: 23,
                  end: 26,
                  start_lc: LineColumn(
                    line: 0,
                    column: 23,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 26,
                  ),
                ),
              )),
              parameters: [],
              span: Span(
                start: 23,
                end: 26,
                start_lc: LineColumn(
                  line: 0,
                  column: 23,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 26,
                ),
              ),
            )),
            body: Block(
              id: 8,
              statements: [],
              expression: Some(Expr(
                id: 7,
                kind: Literal(UnsignedInteger(1)),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: 29,
                  end: 30,
                  start_lc: LineColumn(
                    line: 0,
                    column: 29,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 30,
                  ),
                ),
              )),
              span: Span(
                start: 27,
                end: 32,
                start_lc: LineColumn(
                  line: 0,
                  column: 27,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 32,
                ),
              ),
            ),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 11,
              end: 32,
              start_lc: LineColumn(
                line: 0,
                column: 11,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 32,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 11,
            end: 32,
            start_lc: LineColumn(
              line: 0,
              column: 11,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 32,
            ),
          ),
        ),
        type_annotation: None,
      )),
      span: Span(
        start: 0,
        end: 33,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 33,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 33,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 33,
    ),
  ),
)
