crates/tlang_parser/tests/snapshots/parser_types__return_type_annotation.snap
---
source: crates/tlang_parser/tests/parser_types.rs
expression: "parse! (\"fn foo() -> i64 { 1 }\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 9,
      kind: FunctionDeclaration(FunctionDeclaration(
        id: 8,
        name: Expr(
          id: 3,
          kind: Path(Path(
            segments: [
              Ident(
                name: "foo",
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 3,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 6,
                  ),
                ),
              ),
            ],
            res: Unresolved,
            span: Span(
              start: LineColumn(
                line: 0,
                column: 3,
              ),
              end: LineColumn(
                line: 0,
                column: 6,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: LineColumn(
              line: 0,
              column: 3,
            ),
            end: LineColumn(
              line: 0,
              column: 6,
            ),
          ),
        ),
        parameters: [],
        guard: None,
        return_type_annotation: Some(Ty(
          id: 4,
          kind: Path(Path(
            segments: [
              Ident(
                name: "i64",
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 12,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 15,
                  ),
                ),
              ),
            ],
            res: Unresolved,
            span: Span(
              start: LineColumn(
                line: 0,
                column: 12,
              ),
              end: LineColumn(
                line: 0,
                column: 15,
              ),
            ),
          )),
          parameters: [],
          span: Span(
            start: LineColumn(
              line: 0,
              column: 0,
            ),
            end: LineColumn(
              line: 0,
              column: 0,
            ),
          ),
        )),
        body: Block(
          id: 7,
          statements: [],
          expression: Some(Expr(
            id: 6,
            kind: Literal(UnsignedInteger(1)),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: LineColumn(
                line: 0,
                column: 18,
              ),
              end: LineColumn(
                line: 0,
                column: 19,
              ),
            ),
          )),
          span: Span(
            start: LineColumn(
              line: 0,
              column: 16,
            ),
            end: LineColumn(
              line: 0,
              column: 21,
            ),
          ),
        ),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: LineColumn(
            line: 0,
            column: 0,
          ),
          end: LineColumn(
            line: 0,
            column: 21,
          ),
        ),
      )),
      span: Span(
        start: LineColumn(
          line: 0,
          column: 0,
        ),
        end: LineColumn(
          line: 0,
          column: 21,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: LineColumn(
      line: 0,
      column: 0,
    ),
    end: LineColumn(
      line: 0,
      column: 21,
    ),
  ),
)
