crates/tlang_parser/tests/snapshots/parser_types__variable_declaration_type_annotation-2.snap
---
source: crates/tlang_parser/tests/parser_types.rs
expression: "parse! (\"let x: Option<i64> = 1;\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 7,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 3,
          kind: Identifier(Ident(
            name: "x",
            span: Span(
              start: LineColumn(
                line: 0,
                column: 4,
              ),
              end: LineColumn(
                line: 0,
                column: 5,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: LineColumn(
              line: 0,
              column: 4,
            ),
            end: LineColumn(
              line: 0,
              column: 5,
            ),
          ),
        ),
        expression: Expr(
          id: 6,
          kind: Literal(UnsignedInteger(1)),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: LineColumn(
              line: 0,
              column: 21,
            ),
            end: LineColumn(
              line: 0,
              column: 22,
            ),
          ),
        ),
        type_annotation: Some(Ty(
          id: 5,
          kind: Path(Path(
            segments: [
              Ident(
                name: "Option",
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 7,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 13,
                  ),
                ),
              ),
            ],
            res: Res(
              node_id: None,
            ),
            span: Span(
              start: LineColumn(
                line: 0,
                column: 7,
              ),
              end: LineColumn(
                line: 0,
                column: 13,
              ),
            ),
          )),
          parameters: [
            Ty(
              id: 4,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "i64",
                    span: Span(
                      start: LineColumn(
                        line: 0,
                        column: 14,
                      ),
                      end: LineColumn(
                        line: 0,
                        column: 17,
                      ),
                    ),
                  ),
                ],
                res: Res(
                  node_id: None,
                ),
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 14,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 17,
                  ),
                ),
              )),
              parameters: [],
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 0,
                ),
                end: LineColumn(
                  line: 0,
                  column: 0,
                ),
              ),
            ),
          ],
          span: Span(
            start: LineColumn(
              line: 0,
              column: 0,
            ),
            end: LineColumn(
              line: 0,
              column: 0,
            ),
          ),
        )),
      )),
      span: Span(
        start: LineColumn(
          line: 0,
          column: 0,
        ),
        end: LineColumn(
          line: 0,
          column: 23,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: LineColumn(
      line: 0,
      column: 0,
    ),
    end: LineColumn(
      line: 0,
      column: 23,
    ),
  ),
)
