crates/tlang_parser/tests/snapshots/parser_types__variable_declaration_type_annotation-3.snap
---
source: crates/tlang_parser/tests/parser_types.rs
expression: "parse! (\"let x: std::hash::Map<str, i64> = std::hash::Map();\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 9,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 3,
          kind: Identifier(Ident(
            name: "x",
            span: Span(
              start: LineColumn(
                line: 0,
                column: 4,
              ),
              end: LineColumn(
                line: 0,
                column: 5,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: LineColumn(
              line: 0,
              column: 4,
            ),
            end: LineColumn(
              line: 0,
              column: 5,
            ),
          ),
        ),
        expression: Expr(
          id: 8,
          kind: Call(CallExpression(
            callee: Expr(
              id: 7,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "std",
                    span: Span(
                      start: LineColumn(
                        line: 0,
                        column: 34,
                      ),
                      end: LineColumn(
                        line: 0,
                        column: 37,
                      ),
                    ),
                  ),
                  Ident(
                    name: "hash",
                    span: Span(
                      start: LineColumn(
                        line: 0,
                        column: 39,
                      ),
                      end: LineColumn(
                        line: 0,
                        column: 43,
                      ),
                    ),
                  ),
                  Ident(
                    name: "Map",
                    span: Span(
                      start: LineColumn(
                        line: 0,
                        column: 45,
                      ),
                      end: LineColumn(
                        line: 0,
                        column: 48,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 34,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 37,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 34,
                ),
                end: LineColumn(
                  line: 0,
                  column: 48,
                ),
              ),
            ),
            arguments: [],
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: LineColumn(
              line: 0,
              column: 34,
            ),
            end: LineColumn(
              line: 0,
              column: 50,
            ),
          ),
        ),
        type_annotation: Some(Ty(
          id: 6,
          kind: Path(Path(
            segments: [
              Ident(
                name: "std",
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 7,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 10,
                  ),
                ),
              ),
              Ident(
                name: "hash",
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 12,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 16,
                  ),
                ),
              ),
              Ident(
                name: "Map",
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 18,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 21,
                  ),
                ),
              ),
            ],
            res: Unresolved,
            span: Span(
              start: LineColumn(
                line: 0,
                column: 7,
              ),
              end: LineColumn(
                line: 0,
                column: 21,
              ),
            ),
          )),
          parameters: [
            Ty(
              id: 4,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "str",
                    span: Span(
                      start: LineColumn(
                        line: 0,
                        column: 22,
                      ),
                      end: LineColumn(
                        line: 0,
                        column: 25,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 22,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 25,
                  ),
                ),
              )),
              parameters: [],
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 0,
                ),
                end: LineColumn(
                  line: 0,
                  column: 0,
                ),
              ),
            ),
            Ty(
              id: 5,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "i64",
                    span: Span(
                      start: LineColumn(
                        line: 0,
                        column: 27,
                      ),
                      end: LineColumn(
                        line: 0,
                        column: 30,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 27,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 30,
                  ),
                ),
              )),
              parameters: [],
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 0,
                ),
                end: LineColumn(
                  line: 0,
                  column: 0,
                ),
              ),
            ),
          ],
          span: Span(
            start: LineColumn(
              line: 0,
              column: 0,
            ),
            end: LineColumn(
              line: 0,
              column: 0,
            ),
          ),
        )),
      )),
      span: Span(
        start: LineColumn(
          line: 0,
          column: 0,
        ),
        end: LineColumn(
          line: 0,
          column: 51,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: LineColumn(
      line: 0,
      column: 0,
    ),
    end: LineColumn(
      line: 0,
      column: 51,
    ),
  ),
)
